# rust-microservice-kafka

./: Cargo.toml  README.md
src/: config.rs  downloader.rs  image_processing.rs  kafka.rs  main.rs  model.rs  s3_publisher.rs
