[package]
name = "downloader"
version = "0.1.0"
authors = ["Marco Amann <marco@amann.dev>"]
edition = "2018"

[dependencies]
# tokio runtime and utilities
tokio = { version = "0.2.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3.1"
bytes = "0.5.4"

# communication with kafka
rdkafka = "0.23.1"

# for downloading images
reqwest = { version = "0.10", features = ["json"] }

# image processing
image = "0.22.4"

# allows for uploading stuff to s3
rust-s3 = "0.18.11"

# what could this be for...
log = "0.4.8"
simple_logger = "1.4.0"

# config from parameters/env
structopt = "0.3"

# parsing and deparsing messages received via kafka
serde = "1.0.104"
serde_json = "1.0.48"
